chore: fixed h1 font size on mobile and added in new proper padding to to-page and current-page

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -780,23 +780,28 @@ section {
 // mobile styling
 @media (max-width: 600px) {
 
+  h1 {
+    font-size: 56px;
+    line-height: 80px;   
+  }
+
   .left {
     width: 100vw;
-    // position: inherit;
-    padding: 1.5rem; /* 16px 32px */
+    padding: 0; 
     column-gap: 1.5rem; /* 24px */
     grid-column: span 4;
   }
 
   .title {
-    position: inherit;
+    position: static;
     display: block;
-    // margin: 2rem; /* 16px 32px */
     white-space: wrap;
     word-break: break-all;
-    width: 100%;
+    max-width: 100vh;
     grid-column: span 4;
-    // height: fit-content;
+    > * {
+      padding: 2rem;
+    }
   }
   
 
